--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
   },
   "dependencies": {
     "gatsby": "^2.17.6",
+    "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-typography": "^2.3.15",
+    "gsap": "^2.1.3",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-lincoln": "^0.16.19"
   },
   "devDependencies": {
     "gh-pages": "^2.1.1",
