--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.11.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
+    "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-lincoln": "^0.16.19"
   },
   "devDependencies": {
