--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.17.6",
-    "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-typography": "^2.3.15",
+    "gatsby": "^2.22.9",
+    "gatsby-plugin-sass": "^2.3.2",
+    "gatsby-plugin-typography": "^2.5.2",
     "gsap": "^2.1.3",
-    "node-sass": "^4.13.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-mt-svg-lines": "^0.9.1",
+    "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-lincoln": "^0.16.19"
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "prettier": "^1.18.2"
   },
   "repository": {
