--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^2.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
     "react-mt-svg-lines": "^0.9.1",
     "react-typist": "^2.0.5",
