--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.22.9",
+    "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
     "gatsby-plugin-typography": "^2.5.2",
     "gsap": "^2.1.3",
@@ -23,6 +24,7 @@
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
     "react-hammerjs": "^1.0.1",
+    "react-helmet": "^6.0.0",
     "react-mt-svg-lines": "^0.9.1",
     "react-typist": "^2.0.5",
     "react-typography": "^0.16.19",
