--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "gatsby": "^2.22.9",
+    "gatsby-image": "^2.4.5",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-typography": "^2.5.2",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.5.3",
     "gsap": "^2.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
