--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
     "gsap": "^2.1.3",
+    "hammerjs": "^2.0.8",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
-    "react-hammerjs": "^1.0.1",
     "react-helmet": "^6.0.0",
     "react-mt-svg-lines": "^0.9.1",
     "react-typist": "^2.0.5",
