--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.22.9",
+    "gatsby": "^2.27.3",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-typography": "^2.5.2",
+    "gatsby-plugin-your-fonts": "0.0.1",
     "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.5.3",
     "gsap": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-div-100vh": "^0.3.8",
